--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,4 @@
-Flask==2.0.1
-Kivy==2.3.1
-Flask-Cors==3.0.10
-Flask-Login==0.6.3
-Flask-SQLAlchemy==2.5.1
-google-api-core==2.24.1
-google-auth==2.38.0
+flask==2.3.3
+werkzeug==2.3.7
+python-dotenv==1.0.0
 gunicorn==20.1.0
-pillow==10.4.0
-requests==2.32.3
-SQLAlchemy==2.0.38
-
-numpy==2.2.3
